--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "passport-config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "devStart": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +17,14 @@
   },
   "homepage": "https://github.com/ryanlester91/practicePassportBCrypt#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "ejs": "^2.7.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.16.2",
+    "method-override": "^3.0.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
